--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,9 +20,9 @@ spring.http.multipart.max-file-size=128MB
 spring.http.multipart.max-request-size=128MB
 
 ## App DB Properties
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/usecase
+spring.datasource.url=jdbc:mysql://localhost:3306/uui
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.database.driver.classname=com.mysql.jdbc.Driver
 spring.jpa.show-sql=false
