--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,18 @@
             <artifactId>converter-jackson</artifactId>
             <version>2.3.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.openecomp.sdc.jtosca</groupId>
+            <artifactId>jtosca</artifactId>
+            <version>1.1.3-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>23.0</version>
+        </dependency>
     </dependencies>
 
     <build>
