--- a/server/pom.xml
+++ b/server/pom.xml
@@ -18,22 +18,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.onap.oparent</groupId>
-        <artifactId>oparent</artifactId>
+        <groupId>org.onap.usecase-ui.server</groupId>
+        <artifactId>usecase-ui-server-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <groupId>org.onap.usecase-ui.server</groupId>
-    <artifactId>usecase-ui-server-parent</artifactId>
+    <artifactId>usecase-ui-server</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <name>usecase-ui-server</name>
+    <packaging>jar</packaging>
+    <name>usecase-ui/server</name>
     <description>project for usecase-ui server</description>
-
-    <modules>
-      <module>server</module>
-      <!--module>standalone</module-->
-    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
