add docker config
Change-Id: I1c36f11873ac48cc5f7345068869b194e90f4462
Issue-Id: USECASEUI-36
Signed-off-by: Luji7 <lu.ji3@zte.com.cn>

--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 
     <modules>
       <module>server</module>
-      <!--module>standalone</module-->
+      <module>standalone</module>
     </modules>
 
     <properties>
