--- a/pom.xml
+++ b/pom.xml
@@ -226,6 +226,11 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-antrun-plugin</artifactId>
+              <version>1.8</version>
+            </plugin>
         </plugins>
     </build>
 
