Update monitor function for usecase-ui server
Change-Id: I0d146d9ab6c8fa160013150d3233d5041fccbfd8
Issue-Id: USECASEUI-41
Signed-off-by: shentao <shentao@chinamobile.com>

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -14,7 +14,7 @@
 ## limitations under the License.
 ##
 ## General App Properties
-server.contextPath=/usecase
+server.contextPath=/api/usecaseui/server/v1
 server.port=8082
 spring.http.multipart.max-file-size=128MB
 spring.http.multipart.max-request-size=128MB
