--- a/pom.xml
+++ b/pom.xml
@@ -231,6 +231,14 @@
               <artifactId>maven-antrun-plugin</artifactId>
               <version>1.8</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19</version>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
