Fix running initDb.sh failed.
Change-Id: Ied1d9c2c4dea8ba7ab02ed23fc76a9a8c93bcb7c
Issue-Id: USECASEUI-36
Signed-off-by: Luji7 <lu.ji3@zte.com.cn>

--- a/standalone/src/main/assembly/Dockerfile
+++ b/standalone/src/main/assembly/Dockerfile
@@ -39,7 +39,7 @@ ADD usecase-ui-server-*-linux64.tar.gz /home/uui/
 
 #init db
 RUN chmod 755 /home/uui/resources/bin/*.sh
-RUN /home/uui/resources/bin/initDB.sh
+RUN /home/uui/resources/bin/initDB.sh root root 3306 localhost
 
 RUN chmod 755 /home/uui/bin/*.sh
 
