Modify dockerFile for db creation
Change-Id: I2afe08d4b29f4beaca2200d94b47a876356c5a29
Issue-Id: USECASEUI-44
Signed-off-by: shentao <shentao@chinamobile.com>

--- a/standalone/src/main/assembly/Dockerfile
+++ b/standalone/src/main/assembly/Dockerfile
@@ -38,9 +38,10 @@ WORKDIR /home/uui
 ADD usecase-ui-server-*-linux64.tar.gz /home/uui/
 
 #init db
-RUN chmod 755 /home/uui/resources/bin/*.sh
-RUN /home/uui/resources/bin/initDB.sh root root 3306 localhost
+#RUN chmod 755 /home/uui/resources/bin/*.sh
+#RUN /home/uui/resources/bin/initDB.sh root root 3306 127.0.0.1
 
-RUN chmod 755 /home/uui/bin/*.sh
+#RUN chmod 755 /home/uui/bin/*.sh
 
+ENTRYPOINT /home/uui/resources/bin/initDB.sh root root 3306 127.0.0.1
 ENTRYPOINT /home/uui/bin/run.sh
