fix db script fail.
Change-Id: I33efeb7414c1ced244dc7d02ba7a02937ff8e6bd
Issue-Id: USECASEUI-36
Signed-off-by: Luji7 <lu.ji3@zte.com.cn>

--- a/standalone/src/main/assembly/Dockerfile
+++ b/standalone/src/main/assembly/Dockerfile
@@ -43,5 +43,5 @@ ADD usecase-ui-server-*-linux64.tar.gz /home/uui/
 
 #RUN chmod 755 /home/uui/bin/*.sh
 
-ENTRYPOINT /home/uui/resources/bin/initDB.sh root root 3306 127.0.0.1
+#ENTRYPOINT /home/uui/resources/bin/initDB.sh root root 3306 127.0.0.1
 ENTRYPOINT /home/uui/bin/run.sh
