--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -29,5 +29,5 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
 ## Basic Authentication Properties
-security.user.name=usecase
-security.user.password=usecase
+# security.user.name=usecase
+# security.user.password=usecase
