--- a/server/src/main/resources/dmaap.properties
+++ b/server/src/main/resources/dmaap.properties
@@ -13,7 +13,7 @@
 ## See the License for the specific language governing permissions and
 ## limitations under the License.
 ##
-dmaap.url = http://
+dmaap.url = http://172.30.3.34:80
 dmaap.topic = unauthenticated.SEC_FAULT_OUTPUT
 dmaap.consumerGroup = uuiGroup
 dmaap.conusmer = uuiUser
