--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -31,3 +31,6 @@ spring.jpa.properties.hibernate.format_sql=false
 ## Basic Authentication Properties
 # security.user.name=usecase
 # security.user.password=usecase
+
+## Logback Properties
+logging.file=logs/usecaseui_server.log
