Fix dmaap calling bug
Change-Id: Ibed0e7d666dadd3e06c0b718982afdd90596cf70
Issue-Id: USECASEUI-50
Signed-off-by: shentao <shentao@chinamobile.com>

--- a/server/src/main/resources/dmaap.properties
+++ b/server/src/main/resources/dmaap.properties
@@ -14,7 +14,7 @@
 ## limitations under the License.
 ##
 dmaap.url = http://172.30.3.42:3904
-dmaap.topic = unauthenticated.SEC_FAULT_OUTPUT
+dmaap.topic = events/unauthenticated.SEC_FAULT_OUTPUT
 dmaap.consumerGroup = uuiGroup
 dmaap.conusmer = uuiUser
 dmaap.timeout = 10000
