Fix dmaap subscribing bug
Change-Id: I25ea5b240067f0455c609447766c12bc750c38e2
Issue-Id: USECASEUI-54
Signed-off-by: shentao <shentao@chinamobile.com>

--- a/server/src/main/resources/dmaap.properties
+++ b/server/src/main/resources/dmaap.properties
@@ -13,8 +13,9 @@
 ## See the License for the specific language governing permissions and
 ## limitations under the License.
 ##
-dmaap.url = http://172.30.3.42:3904
-dmaap.topic = events/unauthenticated.SEC_FAULT_OUTPUT
+dmaap.url = http://
+dmaap.alarmTopic = events/unauthenticated.SEC_FAULT_OUTPUT
+dmaap.performanceTopic = events/unauthenticated.SEC_MEASUREMENT_OUTPUT
 dmaap.consumerGroup = uuiGroup
 dmaap.conusmer = uuiUser
 dmaap.timeout = 10000
