Fix monitor bug for calling dmapp
Change-Id: I92a15d969e81ae2697b4637512ebe0627b2f9289
Issue-Id: USECASEUI-54
Signed-off-by: shentao <shentao@chinamobile.com>

--- a/server/src/main/resources/dmaap.properties
+++ b/server/src/main/resources/dmaap.properties
@@ -17,5 +17,5 @@ dmaap.url = http://
 dmaap.alarmTopic = events/unauthenticated.SEC_FAULT_OUTPUT
 dmaap.performanceTopic = events/unauthenticated.SEC_MEASUREMENT_OUTPUT
 dmaap.consumerGroup = uuiGroup
-dmaap.conusmer = uuiUser
+dmaap.consumer = uuiUser
 dmaap.timeout = 10000
