--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.http.multipart.max-request-size=128MB
 ## App DB Properties
 spring.datasource.url=jdbc:mysql://localhost:3306/uui
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.database.driver.classname=com.mysql.jdbc.Driver
 spring.jpa.show-sql=false
