--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/uui
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.database.driver.classname=org.mariadb.jdbc.Driver
+spring.database.driver.classname=com.mysql.jdbc.Driver
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
@@ -34,3 +34,4 @@ spring.jpa.properties.hibernate.format_sql=false
 
 ## Logback Properties
 logging.file=logs/usecaseui_server.log
+logging.level.*=ERROR
