--- a/standalone/pom.xml
+++ b/standalone/pom.xml
@@ -33,6 +33,7 @@
         <linux64outputdir>target/assembly/${linux64id}</linux64outputdir>
         <win64outputdir>target/assembly/${win64id}</win64outputdir>
         <version.output>target/version</version.output>
+        <maven.build.timestamp.format>yyyyMMdd'T'HHmmss'Z'</maven.build.timestamp.format>
     </properties>
 
     <build>
@@ -206,7 +207,9 @@
                                         <dockerFileDir>${basedir}/target/version/</dockerFileDir>
                                         <dockerFile>${basedir}/target/version/Dockerfile</dockerFile>
                                         <tags>
-                                            <tag>${project.version}-STAGING-latest</tag>
+                                            <tag>${project.version}</tag>
+                                            <tag>${project.version}-${maven.build.timestamp}</tag>
+                                            <tag>${project.docker.latesttag.version}</tag>
                                         </tags>
                                     </build>
                                 </image>
