--- a/standalone/pom.xml
+++ b/standalone/pom.xml
@@ -185,6 +185,26 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.groovy.maven</groupId>
+                <artifactId>gmaven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>execute</goal>
+                        </goals>
+                        <configuration>
+                            <source>
+                                def versionArray;
+                                versionArray = ${project.version}.split('-');
+                                project.properties['project.docker.staging.version']=versionArray[0] + "-STAGING";
+                                println 'Staging Tag for docker:' + project.properties['project.docker.staging.version'];
+                            </source>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -207,9 +227,9 @@
                                         <dockerFileDir>${basedir}/target/version/</dockerFileDir>
                                         <dockerFile>${basedir}/target/version/Dockerfile</dockerFile>
                                         <tags>
-                                            <tag>${project.version}</tag>
-                                            <tag>${project.version}-${maven.build.timestamp}</tag>
-                                            <tag>${project.docker.latesttag.version}</tag>
+                                            <tag>${project.version}-latest</tag>
+                                            <tag>${project.docker.staging.version}-latest</tag>
+                                            <tag>${project.docker.staging.version}-${maven.build.timestamp}</tag>
                                         </tags>
                                     </build>
                                 </image>
@@ -223,7 +243,6 @@
                                     <goal>build</goal>
                                 </goals>
                             </execution>
-
                             <execution>
                                 <id>push-images</id>
                                 <phase>deploy</phase>
