--- a/standalone/pom.xml
+++ b/standalone/pom.xml
@@ -33,6 +33,7 @@
         <linux64outputdir>target/assembly/${linux64id}</linux64outputdir>
         <win64outputdir>target/assembly/${win64id}</win64outputdir>
         <version.output>target/version</version.output>
+        <usecaseui.version>1.1.1</usecaseui.version>
         <maven.build.timestamp.format>yyyyMMdd'T'HHmmss'Z'</maven.build.timestamp.format>
     </properties>
 
@@ -207,9 +208,9 @@
                                         <dockerFileDir>${basedir}/target/version/</dockerFileDir>
                                         <dockerFile>${basedir}/target/version/Dockerfile</dockerFile>
                                         <tags>
-                                            <tag>${project.version}-latest</tag>
-                                            <tag>${project.version}.split('-').[0]-STAGING-latest</tag>
-                                            <tag>${project.version}.split('-').[0]-STAGING-${maven.build.timestamp}</tag>
+                                            <tag>${usecaseui.version}-SNAPSHOT-latest</tag>
+                                            <tag>${usecaseui.version]-STAGING-latest</tag>
+                                            <tag>${usecaseui.version]-STAGING-${maven.build.timestamp}</tag>
                                         </tags>
                                     </build>
                                 </image>
