--- a/pom.xml
+++ b/pom.xml
@@ -237,6 +237,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.4.2.RELEASE</version>
                 <configuration>
                     <executable>true</executable>
                 </configuration>
