--- a/standalone/pom.xml
+++ b/standalone/pom.xml
@@ -40,7 +40,9 @@
     <build>
         <plugins>
             <plugin>
-                <artifactId>maven-resources-plugin</artifactId>
+              <groupId>org.apache.maven.plugins</groupId> 
+              <artifactId>maven-resources-plugin</artifactId>
+              <version>2.4.3</version>
                 <executions>
                     <execution>
                         <id>copy-resources-${linux64id}</id>
