Fix usecase-ui-server verify error
Change-Id: Ia7f77f193d8fa4b58a05fd67e53466183f583185
Issue-ID: USECASEUI-151
Signed-off-by: zhangab <zhanganbing@chinamobile.com>

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -259,6 +259,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.4.2.RELEASE</version>
                 <configuration>
                     <executable>true</executable>
                 </configuration>
