--- a/server/pom.xml
+++ b/server/pom.xml
@@ -27,7 +27,7 @@
     <artifactId>usecase-ui-server</artifactId>
     <version>1.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>usecase-ui/server</name>
+    <name>usecase-ui-server/server</name>
     <description>project for usecase-ui server</description>
 
     <properties>
