--- a/standalone/pom.xml
+++ b/standalone/pom.xml
@@ -22,9 +22,12 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
+    <groupId>org.onap.usecase-ui.server</groupId>
     <artifactId>standalone</artifactId>
-    <name>usecase-server/standalone</name>
+    <version>1.1.0-SNAPSHOT</version>
+    <name>usecase-ui-server/standalone</name>
     <packaging>pom</packaging>
+    <description>project for usecase-ui server assembly</description>
 
     <properties>
         <packagename>usecase-ui-server</packagename>
