Fix docker build error for usecase-ui-server
Change-Id: Id280b656ac2737c8b448806ed064e0e92694a930
Issue-ID: USECASEUI-152
Signed-off-by: zhangab <zhanganbing@chinamobile.com>

--- a/standalone/pom.xml
+++ b/standalone/pom.xml
@@ -30,7 +30,7 @@
         <packagename>usecase-ui-server</packagename>
         <linux64id>linux64</linux64id>
         <win64id>win64</win64id>
-        <linux64outputdir>target/assembly/${linux64id}</linux64outputdir>
+        <linux64outputdir>target/assembly</linux64outputdir>
         <win64outputdir>target/assembly/${win64id}</win64outputdir>
         <version.output>target/version</version.output>
         <usecaseui.version>1.1.1</usecaseui.version>
