--- a/standalone/pom.xml
+++ b/standalone/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <groupId>org.onap.usecase-ui.server</groupId>
         <artifactId>usecase-ui-server-parent</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.2.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -33,7 +33,7 @@
         <linux64outputdir>target/assembly/${linux64}</linux64outputdir>
         <win64outputdir>target/assembly/${win64id}</win64outputdir>
         <version.output>target/version</version.output>
-        <usecaseui.version>1.1.1</usecaseui.version>
+        <usecaseui.version>1.2.0</usecaseui.version>
         <maven.build.timestamp.format>yyyyMMdd'T'HHmmss'Z'</maven.build.timestamp.format>
     </properties>
 
@@ -118,6 +118,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.8</version>
                 <executions>
                     <execution>
                         <id>copy-jar-${linux64id}</id>
@@ -130,7 +131,6 @@
                                 <artifactItem>
                                     <groupId>org.onap.usecase-ui.server</groupId>
                                     <artifactId>usecase-ui-server</artifactId>
-                                    <version>1.1.0-SNAPSHOT</version>
                                     <type>jar</type>
                                     <overWrite>true</overWrite>
                                     <outputDirectory>${linux64outputdir}</outputDirectory>
@@ -150,7 +150,6 @@
                                 <artifactItem>
                                     <groupId>org.onap.usecase-ui.server</groupId>
                                     <artifactId>usecase-ui-server</artifactId>
-                                    <version>1.1.0-SNAPSHOT</version>
                                     <type>jar</type>
                                     <overWrite>true</overWrite>
                                     <outputDirectory>${win64outputdir}</outputDirectory>
