Fix usecase-ui-server shutdown bug
Change-Id: I176795884f01192abf42c2fcc152a3f445a1528e
Issue-ID: USECASEUI-176
Signed-off-by: zhangab <zhanganbing@chinamobile.com>

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -35,3 +35,8 @@ spring.jpa.properties.hibernate.format_sql=false
 ## Logback Properties
 logging.file=logs/usecaseui_server.log
 logging.level.*=ERROR
+
+#enable shutdown
+endpoints.shutdown.enabled=true
+endpoints.shutdown.sensitive=false
+management.context-path=/usecase-ui-server
