--- a/server/pom.xml
+++ b/server/pom.xml
@@ -204,6 +204,12 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.23</version>
         </dependency>
+        
+        <dependency>
+		    <groupId>com.alibaba</groupId>
+		    <artifactId>dubbo</artifactId>
+		    <version>2.6.5</version>
+		</dependency>
         <dependency>
             <groupId>org.openecomp.sdc.jtosca</groupId>
             <artifactId>jtosca</artifactId>
