--- a/server/pom.xml
+++ b/server/pom.xml
@@ -205,9 +205,9 @@
             <version>1.2.23</version>
         </dependency>
         <dependency>
-            <groupId>org.openecomp.sdc.jtosca</groupId>
-            <artifactId>jtosca</artifactId>
-            <version>1.1.1</version>
+            <groupId>org.onap.sdc.sdc-tosca</groupId>
+            <artifactId>sdc-tosca</artifactId>
+            <version>1.4.63</version>
         </dependency>
 
         <dependency>
