Upgrade UUI Database to PostgresSQL
Change-Id: I9fcfe72edb8b40efee7c30a72b53812ba0ac656a
Issue-ID: USECASEUI-236
Signed-off-by: guochuyicmri <guochuyi@chinamobile.com>

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -14,17 +14,17 @@
 ## limitations under the License.
 ##
 ## General App Properties
-server.contextPath=/api/usecaseui/server/v1
+server.contextPath=/api/usecaseui-server/v1
 server.port=8082
 spring.http.multipart.max-file-size=128MB
 spring.http.multipart.max-request-size=128MB
 
 ## App DB Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/uui
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.database.driver.classname=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/uui
+spring.datasource.username=uui
+spring.datasource.password=uui
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.database.driver.classname=org.postgresql.Driver
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
