Fix security risk issues
Change-Id: I92cc85056a984dc6dce803334c0f60c2949d44b4
Issue-ID: USECASEUI-258
Signed-off-by: guochuyicmri <guochuyi@chinamobile.com>

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -173,6 +173,11 @@
             <artifactId>persistence-api</artifactId>
             <version>${javax.persistence.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>${tomcat.version}</version>
+        </dependency>
 
         <!-- commons-csv -->
         <dependency>
