--- a/server/pom.xml
+++ b/server/pom.xml
@@ -228,6 +228,11 @@
             <artifactId>jetty-util</artifactId>
             <version>9.4.14.v20181114</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-rest-webmvc</artifactId>
+            <version>3.1.5.RELEASE</version>
+        </dependency>
 
         <!-- commons-csv -->
         <dependency>
