--- a/standalone/pom.xml
+++ b/standalone/pom.xml
@@ -18,12 +18,12 @@
     <parent>
         <groupId>org.onap.usecase-ui.server</groupId>
         <artifactId>usecase-ui-server-parent</artifactId>
-        <version>1.3.0-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>standalone</artifactId>
-    <version>1.3.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <packaging>pom</packaging>
     <name>usecase-ui-server-standalone</name>
 
@@ -34,7 +34,7 @@
         <linux64outputdir>target/assembly/${linux64}/</linux64outputdir>
         <win64outputdir>target/assembly/${win64id}/</win64outputdir>
         <version.output>target/version/</version.output>
-        <usecaseui.version>1.3.0</usecaseui.version>
+        <usecaseui.version>2.0.0</usecaseui.version>
         <maven.build.timestamp.format>yyyyMMdd'T'HHmmss'Z'</maven.build.timestamp.format>
     </properties>
 
@@ -265,7 +265,6 @@
                                     <goal>build</goal>
                                 </goals>
                             </execution>
-
                             <execution>
                                 <id>push-images</id>
                                 <phase>deploy</phase>
@@ -283,10 +282,6 @@
 
     <dependencyManagement>
         <dependencies>
-            <!--dependency>
-                <groupId>ant-contrib</groupId>
-                <artifactId>ant-contrib</artifactId>
-            </dependency-->
             <dependency>
                 <groupId>org.onap.usecase-ui.server</groupId>
                 <artifactId>usecase-ui-server</artifactId>
