change usecase-ui server parent pom
Change-Id: I6514028e423ff5055a76d0cea8ca8832d5ac344f
Issue-ID: USECASEUI-259
Signed-off-by: guochuyicmri <guochuyi@chinamobile.com>

--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
 
     <modules>
         <module>server</module>
-        <!--module>standalone</module-->
+        <module>standalone</module>
     </modules>
 
     <!--build>
